--- a/juju/charms/trusty/contrail-webui/templates/config.global.js.j2
+++ b/juju/charms/trusty/contrail-webui/templates/config.global.js.j2
@@ -152,7 +152,7 @@ config.vcenter.datacenter = 'vcenter';          //datacenter name
 config.vcenter.dvsswitch = 'vswitch';           //dvsswitch name
 config.vcenter.strictSSL = false;               //Validate the certificate or ignore
 config.vcenter.ca = '';                         //specify the certificate key file
-config.vcenter.wsdl = '{{ config['src-path']|default('/var/lib/contrail-webui', true) }}/contrail-web-core/webroot/js/vim.wsdl';
+config.vcenter.wsdl = '/var/lib/contrail-webui/contrail-web-core/webroot/js/vim.wsdl';
 
 /* Discovery Service */
 config.discoveryService = {};
@@ -217,15 +217,15 @@ config.redis_dump_file = '/var/lib/redis/dump-webui.rdb';
 config.redis_password = '';
 
 /* Logo File: Use complete path of logo file location */
-config.logo_file = '{{ config['src-path']|default('/var/lib/contrail-webui', true) }}/contrail-web-core/webroot/img/opencontrail-logo.png';
+config.logo_file = '{{ config['logo-filename'] if config['logo-filename'] else logo_file }}';
 
 /* Favicon File: Use complete path of favicon file location */
-config.favicon_file = '{{ config['src-path']|default('/var/lib/contrail-webui', true) }}/contrail-web-core/webroot/img/opencontrail-favicon.ico';
+config.favicon_file = '{{ config['favicon-filename'] if config['favicon-filename'] else favicon_file }}';
 
 config.featurePkg = {};
 /* Add new feature Package Config details below */
 config.featurePkg.webController = {};
-config.featurePkg.webController.path = '{{ config['src-path']|default('/var/lib/contrail-webui', true) }}/contrail-web-controller';
+config.featurePkg.webController.path = '{{ webcontroller_path }}';
 config.featurePkg.webController.enable = true;
 
 /* Enable/disable Stat Query Links in Sidebar*/
